fix jump links

--- a/MtRoseConsultingWebsite/wwwroot/css/site.css
+++ b/MtRoseConsultingWebsite/wwwroot/css/site.css
@@ -14,7 +14,6 @@ html {
 }
 
 body {
-    position: relative;
   margin-bottom: 60px;
 }
 
